// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobError /> renders correctly with error details 1`] = `
<Error__StyledJobError
  color="red"
>
  <div>
    Traceback (most recent call last):
  </div>
  <div
    key="0"
  >
    line one
  </div>
  <div
    key="1"
  >
    line two
  </div>
  <div
    key="2"
  >
    line three
  </div>
  <p>
    TestErrorWithStackTrace
    <Error__JobErrorDetails>
      : 
      test error details
    </Error__JobErrorDetails>
  </p>
</Error__StyledJobError>
`;

exports[`<JobError /> renders correctly without error details 1`] = `
<Error__StyledJobError
  color="red"
>
  <div>
    Traceback (most recent call last):
  </div>
  <p>
    TestErrorWithoutStackTrace
  </p>
</Error__StyledJobError>
`;
